fix logo visual bug on mobile

--- a/front/src/styles/_nav.scss
+++ b/front/src/styles/_nav.scss
@@ -1240,6 +1240,9 @@ header {
 }
 
 @media all and (max-width: 991px) {
+	.logoge {
+		display: none;
+	  }
 	.header-top {
 		padding: 10px 0;
 		height: 60px;
